tree-sitter-twinkle/grammar.js
    source_file: $ => repeat(seq(
      $._top_level,
      optional($._terminator),
    )),

    _top_level: $ => choice(
      $.use_declaration,
      $.type_declaration,
      $.function_declaration,
      $.extern_declaration,
      $.extern_type_declaration,
      $.extern_block,
      $._top_level_statement,
    ),

    use_declaration: $ => seq(
      'use',
      field('path', $.module_path),
      optional(seq('as', field('alias', $.identifier))),
    ),

    module_path: $ => prec.right(choice(
      // stdlib: @std.fs or @std.fs.{...}
      seq('@', $.identifier, repeat(seq('.', $.identifier)), optional(seq('.', field('items', $.import_item_list)))),
      // relative: .helper, .sub.mod or .foo.{...}
      seq('.', $.identifier, repeat(seq('.', $.identifier)), optional(seq('.', field('items', $.import_item_list)))),
      // absolute: foo.bar, utils or foo.bar.{...}
      seq($.identifier, repeat(seq('.', $.identifier)), optional(seq('.', field('items', $.import_item_list)))),
    )),

    top_level_let_binding: $ => seq(
      optional('pub'),
      $.let_binding,
    ),

    // Optional explicit semicolon separator. Newlines are whitespace (in extras)
    // and statement boundaries are determined by grammar structure — this allows
    // method-chain continuation across newlines (e.g. foo\n  .bar()).
    _terminator: $ => ';',

    // ===== Type Declarations =====

    _expression: $ => $.assignment_expression,

    assignment_expression: $ => choice(
      prec.right('assign', seq(
        field('left', $._lvalue),
        field('operator', '='),
        field('right', $._expression),
      )),
      $.range_expression,
    ),

    // Receiver shorthand: .method(args) as a postfix expression in assignment RHS.
    // x = .method(args) desugars to x = x.method(args).
    // Placed in _postfix_expression so postfix chains (.map, [i], ()) apply normally.
    _lvalue: $ => choice(
      $.identifier,
      $.field_access,
      $.index_access,
    ),

    logical_or_expression: $ => choice(
      prec.left('or', seq(
        field('left', $.logical_or_expression),
        'or',
        field('right', $.logical_and_expression),
      )),
      $.logical_and_expression,
    ),

    logical_and_expression: $ => choice(
      prec.left('and', seq(
        field('left', $.logical_and_expression),
        'and',
        field('right', $.bitwise_or_expression),
      )),
      $.bitwise_or_expression,
    ),

    equality_expression: $ => choice(
      prec.left('equality', seq(
        field('left', $.equality_expression),
        field('operator', choice('==', '!=')),
        field('right', $.comparison_expression),
      )),
      $.comparison_expression,
    ),

    comparison_expression: $ => choice(
      prec.left('comparison', seq(
        field('left', $.comparison_expression),
        field('operator', choice('<', '<=', '>', '>=')),
        field('right', $.shift_expression),
      )),
      $.shift_expression,
    ),

    additive_expression: $ => choice(
      prec.left('additive', seq(
        field('left', $.additive_expression),
        field('operator', choice('+', '-')),
        field('right', $.multiplicative_expression),
      )),
      $.multiplicative_expression,
    ),

    multiplicative_expression: $ => choice(
      prec.left('multiplicative', seq(
        field('left', $.multiplicative_expression),
        field('operator', choice('*', '/', '%')),
        field('right', $.unary_expression),
      )),
      $.unary_expression,
    ),

    unary_expression: $ => choice(
      prec('unary', seq(
        field('operator', choice('-', '!', '~', 'try')),
        field('operand', $.unary_expression),
      )),
      $._postfix_expression,
    ),

    _postfix_expression: $ => choice(
      $.call_expression,
      $.field_access,
      $.index_access,
      $.receiver_shorthand,
      $._primary_expression,
    ),

    call_expression: $ => prec.dynamic(1, prec('postfix', seq(
      field('function', $._postfix_expression),
      field('arguments', $.argument_list),
    ))),

    argument_list: $ => seq(
      '(',
      optional($.arguments),
      ')',
    ),

    arguments: $ => seq(
      $._expression,
      repeat(seq(',', $._expression)),
      optional(','),
    ),

    field_access: $ => prec('postfix', seq(
      field('object', $._postfix_expression),
      '.',
      field('field', $.identifier),
    )),

    int_literal: $ => choice(
      /0x[0-9a-fA-F]+/,
      /\d+/,
    ),

    // A character literal denotes an integer code point (e.g. `'A'` = 65).
    // Single ASCII character or an escape sequence; lexed as one token.
    float_literal: $ => /\d+\.\d+/,

    let_binding: $ => choice(
      seq(
        field('name', $.identifier),
        ':=',
        field('value', $._expression),
      ),
      seq(
        field('name', $.identifier),
        ':',
        field('type', $.type),
        '=',
        field('value', $._expression),
      ),
    ),

    type: $ => choice(
      // !E shorthand: Result<Void, E>
      seq(
        '!',
        field('error_type', $._base_type),
      ),
      // T, T?, T!E, T?!E
      seq(
        choice($.function_type, $._base_type),
        optional('?'),
        optional(seq('!', field('error_type', $._base_type))),
      ),
    ),

    // Make function_type right-associative:
    // fn(A) fn(B) C  ==> fn(A) (fn(B) C)
    _base_type: $ => choice(
      $.primitive_type,
      $.generic_type,
      $.type_name,
      $.record_type_def,
      $.tuple_type,
    ),

    // Tuple type `(A, B)` … `(A, B, C, D)`; the compiler enforces the 2-4 cap.
    // Postfix `?`/`!E` wrap the whole tuple (handled by the `type` rule).
    primitive_type: $ => choice(
      'Int',
      'Float',
      'Bool',
      'String',
      'Void',
    ),

    identifier: $ => /[a-zA-Z][a-zA-Z0-9_]*/,

    comment: $ => token(seq('//', /.*/)),
  },
