tree-sitter-twinkle/test/corpus/01_basics.txt
================================================================================
Simple let binding
================================================================================

x := 1

--------------------------------------------------------------------------------

(source_file
  (top_level_let_binding
    (let_binding
      name: (identifier)
      value: (assignment_expression
        (logical_or_expression
          (logical_and_expression
            (equality_expression
              (comparison_expression
                (additive_expression
                  (multiplicative_expression
                    (unary_expression
                      (int_literal))))))))))))

================================================================================
Comment only
================================================================================

// This is a comment

--------------------------------------------------------------------------------

(source_file
  (comment))

================================================================================
Let binding with type inference
================================================================================

x := 42

--------------------------------------------------------------------------------

(source_file
  (top_level_let_binding
    (let_binding
      name: (identifier)
      value: (assignment_expression
        (logical_or_expression
          (logical_and_expression
            (equality_expression
              (comparison_expression
                (additive_expression
                  (multiplicative_expression
                    (unary_expression
                      (int_literal))))))))))))

================================================================================
Let binding with explicit type
================================================================================

x: Int = 42

--------------------------------------------------------------------------------

(source_file
  (top_level_let_binding
    (let_binding
      name: (identifier)
      type: (type
        (primitive_type))
      value: (assignment_expression
        (logical_or_expression
          (logical_and_expression
            (equality_expression
              (comparison_expression
                (additive_expression
                  (multiplicative_expression
                    (unary_expression
                      (int_literal))))))))))))

================================================================================
ASI - newline acts as semicolon
================================================================================

x := 1
y := 2

--------------------------------------------------------------------------------

(source_file
  (top_level_let_binding
    (let_binding
      name: (identifier)
      value: (assignment_expression
        (logical_or_expression
          (logical_and_expression
            (equality_expression
              (comparison_expression
                (additive_expression
                  (multiplicative_expression
                    (unary_expression
                      (int_literal)))))))))))
  (top_level_let_binding
    (let_binding
      name: (identifier)
      value: (assignment_expression
        (logical_or_expression
          (logical_and_expression
            (equality_expression
              (comparison_expression
                (additive_expression
                  (multiplicative_expression
                    (unary_expression
                      (int_literal))))))))))))

================================================================================
Explicit semicolon
================================================================================

x := 1;
y := 2;

--------------------------------------------------------------------------------

(source_file
  (top_level_let_binding
    (let_binding
      name: (identifier)
      value: (assignment_expression
        (logical_or_expression
          (logical_and_expression
            (equality_expression
              (comparison_expression
                (additive_expression
                  (multiplicative_expression
                    (unary_expression
                      (int_literal)))))))))))
  (top_level_let_binding
    (let_binding
      name: (identifier)
      value: (assignment_expression
        (logical_or_expression
          (logical_and_expression
            (equality_expression
              (comparison_expression
                (additive_expression
                  (multiplicative_expression
                    (unary_expression
                      (int_literal))))))))))))

================================================================================
Use declaration — simple
================================================================================

use math

--------------------------------------------------------------------------------

(source_file
  (use_declaration
    path: (module_path
      (identifier))))

================================================================================
Use declaration — dotted path
================================================================================

use math.vector

--------------------------------------------------------------------------------

(source_file
  (use_declaration
    path: (module_path
      (identifier)
      (identifier))))

================================================================================
Use declaration — with alias
================================================================================

use math.vector as vec

--------------------------------------------------------------------------------

(source_file
  (use_declaration
    path: (module_path
      (identifier)
      (identifier))
    alias: (identifier)))

================================================================================
Use declaration — stdlib sigil
================================================================================

use @array

--------------------------------------------------------------------------------

(source_file
  (use_declaration
    path: (module_path
      (identifier))))

================================================================================
Use declaration — stdlib with alias
================================================================================

use @std.json as json

--------------------------------------------------------------------------------

(source_file
  (use_declaration
    path: (module_path
      (identifier)
      (identifier))
    alias: (identifier)))

================================================================================
Pub let binding
================================================================================

pub PI: Float = 3.14159

--------------------------------------------------------------------------------

(source_file
  (top_level_let_binding
    (let_binding
      name: (identifier)
      type: (type
        (primitive_type))
      value: (assignment_expression
        (logical_or_expression
          (logical_and_expression
            (equality_expression
              (comparison_expression
                (additive_expression
                  (multiplicative_expression
                    (unary_expression
                      (float_literal))))))))))))

================================================================================
Method chain — same line
================================================================================

s.len()

--------------------------------------------------------------------------------

(source_file
  (assignment_expression
    (logical_or_expression
      (logical_and_expression
        (equality_expression
          (comparison_expression
            (additive_expression
              (multiplicative_expression
                (unary_expression
                  (call_expression
                    function: (field_access
                      object: (identifier)
                      field: (identifier))
                    arguments: (argument_list)))))))))))

================================================================================
Method chain — across newlines
================================================================================

s
  .len()

--------------------------------------------------------------------------------

(source_file
  (assignment_expression
    (logical_or_expression
      (logical_and_expression
        (equality_expression
          (comparison_expression
            (additive_expression
              (multiplicative_expression
                (unary_expression
                  (call_expression
                    function: (field_access
                      object: (identifier)
                      field: (identifier))
                    arguments: (argument_list)))))))))))

================================================================================
Method chain — multi-step across newlines
================================================================================

s
  .substring(0, 5)
  .len()

--------------------------------------------------------------------------------

(source_file
  (assignment_expression
    (logical_or_expression
      (logical_and_expression
        (equality_expression
          (comparison_expression
            (additive_expression
              (multiplicative_expression
                (unary_expression
                  (call_expression
                    function: (field_access
                      object: (call_expression
                        function: (field_access
                          object: (identifier)
                          field: (identifier))
                        arguments: (argument_list
                          (arguments
                            (assignment_expression
                              (logical_or_expression
                                (logical_and_expression
                                  (equality_expression
                                    (comparison_expression
                                      (additive_expression
                                        (multiplicative_expression
                                          (unary_expression
                                            (int_literal)))))))))
                            (assignment_expression
                              (logical_or_expression
                                (logical_and_expression
                                  (equality_expression
                                    (comparison_expression
                                      (additive_expression
                                        (multiplicative_expression
                                          (unary_expression
                                            (int_literal))))))))))))
                      field: (identifier))
                    arguments: (argument_list)))))))))))
